--- a/index.html
+++ b/index.html
@@ -3,41 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Little Bird Toys (LBTC)</title>
+    <title>Little Bird Toys</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to Little Bird Toys (LBTC)</h1>
-        <p class="tagline">Crafting Joy, Inspiring Play</p>
-
-        <div class="product-images">
-            <img src="" alt="Product 1">
-            <img src="" alt="Product 2">
-            <img src="" alt="Product 3">
-        </div>
-
-        <p class="mission">
-            At Little Bird Toys, we believe in the magic of play. Our mission is to craft toys that ignite creativity, foster learning, and bring endless joy to children around the world. Each of our high-quality, thoughtfully designed toys is a testament to our commitment to excellence and passion for childhood wonder.
-        </p>
-
-        <div class="nav-buttons">
-            <a href="#shop">Shop Now</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
-            <a href="#blog">Blog</a>
-        </div>
-
-        <div class="features">
-            <h2>Why Choose Little Bird Toys?</h2>
+    <header>
+        <div class="logo"></div>
+        <img src="Logo.png" alt="LBTC Logo" class="Logo">
+        <nav>
             <ul>
-                <li><strong>Quality Craftsmanship:</strong> Each toy is made with care and precision, ensuring durability and safety.</li>
-                <li><strong>Educational Value:</strong> Our toys are designed to stimulate learning and development.</li>
-                <li><strong>Sustainable Practices:</strong> We are committed to eco-friendly materials and processes.</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Reviews</a></li>
             </ul>
+        </nav>
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
         </div>
-    </div>
+    </header>
 
+    <section class="hero">
+        <div class="hero-slide">
+            <img src="Alternate Logo 2.png" alt="logo">
+            <div class="hero-text">
+                <a href="#" class="cta">Shop Now</a>
+            </div>
+        </div>
+        </section>
+
+    <section class="featured-products">
+        <h2>Featured Products</h2>
+        <div class="product-list">
+            <div class="product">
+                <img src="train1.jpg" alt="Product 1">
+                <h3>Wooden Train Set</h3>
+                <a href="#" class="quick-view">Quick View</a>
+            </div>
+            <div class="product">
+                <img src="boat1.jpg" alt="Product 2">
+                <h3>Wooden Boat</h3>
+                <a href="#" class="quick-view">Quick View</a>
+            </div>
+            <div class="product">
+                <img src="plane1.jpg" alt="Product 3">
+                <h3>Wooden Plane</h3>
+                <a href="#" class="quick-view">Quick View</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-us">
+        <h2>About Us</h2>
+        <p>Little Bird Toys is a family-owned business specializing in handcrafted wooden toys. Our toys are made with love and care, ensuring quality and safety for your little ones. <a href="#">Learn more</a></p>
+    </section>
+
+    <section class="testimonials">
+        <h2>Customer Testimonials</h2>
+        <div class="testimonial-list">
+            <div class="testimonial">
+                <p>"Amazing craftsmanship and attention to detail! My kids love their new wooden train set."</p>
+                <p>- Craig Brown</p>
+            </div>
+            <div class="testimonial">
+                <p>"Beautiful and safe toys that will last for generations. Highly recommend!"</p>
+                <p>- Mike Smith</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Little Bird Toys. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
